--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>mywebpage</title>
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     rel="stylesheet"
@@ -11,37 +11,40 @@
   />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+
+<!-- I have a document saved on my computer with the head already made. It includes the normalize CSS file, but other than that I don't fully understand each component -->
+  
   <body>
-
-    html
-
+    <header>
+      <h1 class="center">Jeffrey Medina</h1>
+      <h3 class="center">Software Engineer</h3>
+    </header>
+    <main>
+      <img src="family.jpg" class="image" width="800">
+        <h2 class="center">Nice to meet you!</h2>
+          <p class="center">My name is Jeffrey Medina. I currently work from Avondale, Arizona, I am 27 years old, and I can't wait to meet you!</p>
+        <hr>
+        <h2 class="center">About Me</h2>
+          <p class="center">I have many interests that make up who I am. I enjoy coding, organizing, puzzles, video games, movies, and any good group activities. While I am new to coding and Software Engineering, I am extatic to learn this new language and put it to use every day for the rest of my life. With each day I learn code, I realize that it is something that really grabs me and pulls me in. From trying to manipulate old computer games to creating my own webpages, I have come a long way.</p>
+          <p class="center">As I excitedly share the things I am learning with my wife, it is clear that I need to find others that share my passion and speak my new language. I love my wife, but she does not share my enthusiasm. Speaking of my wife, I would like to share a few things about my life. I have a beautiful wife named Chelsie, and two beautiful children named Leo and Kiera. I have a specific priority I would like to share:</p>
+          <ol class="center">
+            <li>Family</li>
+            <li>Career</li>
+          </ol>
+          <!-- Getting the order and unordered lists to be centered took some extra work and I had to look online. I am happy they are working now. -->
+            <p class="center">As much as I love my new career, I think it is improtant tho note that everything I do, I do for my family. They are my world, and my work provides for them. I am just glad I enjoy my work too.</p>   
+      <hr>
+    </main>
+    <footer>
+        <h2 class="center">Contact Information</h2>
+        <p class="center">Here are a few ways you can contanct me. More will be added as time goes on:</p>
+          <ul class="center">
+            <li><a href="https://github.com/Jayyfrey">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/jeffrey-medina-7ba255204/">LinkedIn</a></li>
+          </ul>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
 
-
-
- html, head, body, meta, title,
- h1, h2, h3, p, link, ul, ol, img, a, hr
-
-
-
-
-An Intro section that contains the following information:
-
-Who you are
-
-Where you are located
-
-An About Me section that contains the following information:
-
-A description that shows your passion for web development and your willingness to work with others
-
-One or two sentences that describe other interests you have outside of web development
-A Contact section that contains the following information:
-
-A link to your LinkedIn profile
-
-A link to your GitHub profile
-
-A link to your email (optional)
+<!-- Nothing special, but to be honest, I am proud of my little website -->
