change image link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h3 class="center">Software Engineer</h3>
     </header>
     <main>
-      <img src="family.jpg" class="image" width="800">
+      <img src="Medinas-45.jpg" class="image" width="800">
         <h2 class="center">Nice to meet you!</h2>
           <p class="center">My name is Jeffrey Medina. I currently work from Avondale, Arizona, I am 27 years old, and I can't wait to meet you!</p>
         <hr>
