--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Career</li>
           </ol>
           <!-- Getting the order and unordered lists to be centered took some extra work and I had to look online. I am happy they are working now. -->
-            <p class="center">As much as I love my new career, I think it is improtant tho note that everything I do, I do for my family. They are my world, and my work provides for them. I am just glad I enjoy my work too.</p>   
+            <p class="center">As much as I love my new career, I think it is improtant to note that everything I do, I do for my family. They are my world, and my work provides for them. I am just glad I enjoy my work too.</p>   
       <hr>
     </main>
     <footer>
